// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Native renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={21}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 1 - 20 of 21 results
          </Text>
        </View>,
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ]
          }
        >
          <View />
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./2"
            >
              <NextPageIcon
                label="Next"
              />
            </Link>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": Object {
        "alignItems": "stretch",
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 1 - 20 of 21 results
          </Text>,
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "justifyContent": "center",
            },
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Showing 1 - 20 of 21 results",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
              },
            ],
          },
          "ref": null,
          "rendered": "Showing 1 - 20 of 21 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#dbdbdb",
              "borderBottomWidth": 1,
              "borderStyle": "solid",
              "borderTopColor": "#dbdbdb",
              "borderTopWidth": 1,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <NextPageIcon
                  label="Next"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./2",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Next",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 20 of 21 results
            </Text>
          </View>,
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 20 of 21 results
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Showing 1 - 20 of 21 results",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ],
            },
            "ref": null,
            "rendered": "Showing 1 - 20 of 21 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>
              </View>,
            ],
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <NextPageIcon
                    label="Next"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./2",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Next",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Native renders prev and next link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={2}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 21 - 40 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ]
          }
        >
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./1"
            >
              <PreviousPageIcon
                label="Previous"
              />
            </Link>
          </View>
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./3"
            >
              <NextPageIcon
                label="Next"
              />
            </Link>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": Object {
        "alignItems": "stretch",
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 21 - 40 of 41 results
          </Text>,
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "justifyContent": "center",
            },
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Showing 21 - 40 of 41 results",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
              },
            ],
          },
          "ref": null,
          "rendered": "Showing 21 - 40 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./1"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>
            </View>,
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./3"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#dbdbdb",
              "borderBottomWidth": 1,
              "borderStyle": "solid",
              "borderTopColor": "#dbdbdb",
              "borderTopWidth": 1,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./1"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <PreviousPageIcon
                  label="Previous"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./1",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Previous",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./3"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <NextPageIcon
                  label="Next"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Next",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 21 - 40 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./1"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>
            </View>
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./3"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 21 - 40 of 41 results
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Showing 21 - 40 of 41 results",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ],
            },
            "ref": null,
            "rendered": "Showing 21 - 40 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./1"
                >
                  <PreviousPageIcon
                    label="Previous"
                  />
                </Link>
              </View>,
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./3"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>
              </View>,
            ],
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./1"
                >
                  <PreviousPageIcon
                    label="Previous"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <PreviousPageIcon
                    label="Previous"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./1",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Previous",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./3"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <NextPageIcon
                    label="Next"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./3",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Next",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Native renders prev link 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={3}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 41 - 41 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ]
          }
        >
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./2"
            >
              <PreviousPageIcon
                label="Previous"
              />
            </Link>
          </View>
          <View />
        </View>,
      ],
      "onLayout": [Function],
      "style": Object {
        "alignItems": "stretch",
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 41 - 41 of 41 results
          </Text>,
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "justifyContent": "center",
            },
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Showing 41 - 41 of 41 results",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
              },
            ],
          },
          "ref": null,
          "rendered": "Showing 41 - 41 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>
            </View>,
            <View />,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#dbdbdb",
              "borderBottomWidth": 1,
              "borderStyle": "solid",
              "borderTopColor": "#dbdbdb",
              "borderTopWidth": 1,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <PreviousPageIcon
                  label="Previous"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./2",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Previous",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 41 - 41 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <PreviousPageIcon
                  label="Previous"
                />
              </Link>
            </View>
            <View />
          </View>,
        ],
        "onLayout": [Function],
        "style": Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 41 - 41 of 41 results
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Showing 41 - 41 of 41 results",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ],
            },
            "ref": null,
            "rendered": "Showing 41 - 41 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <PreviousPageIcon
                    label="Previous"
                  />
                </Link>
              </View>,
              <View />,
            ],
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <PreviousPageIcon
                    label="Previous"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <PreviousPageIcon
                    label="Previous"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./2",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Previous",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Native renders prev link 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={41}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 1 - 20 of 41 results
          </Text>
        </View>,
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ]
          }
        >
          <View />
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./2"
            >
              <NextPageIcon
                label="Next"
              />
            </Link>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": Object {
        "alignItems": "stretch",
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ]
            }
          >
            Showing 1 - 20 of 41 results
          </Text>,
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "justifyContent": "center",
            },
            null,
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Showing 1 - 20 of 41 results",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 15,
              },
            ],
          },
          "ref": null,
          "rendered": "Showing 1 - 20 of 41 results",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#dbdbdb",
              "borderBottomWidth": 1,
              "borderStyle": "solid",
              "borderTopColor": "#dbdbdb",
              "borderTopWidth": 1,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <NextPageIcon
                  label="Next"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./2",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Next",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 20 of 41 results
            </Text>
          </View>,
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 20 of 41 results
            </Text>,
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "justifyContent": "center",
              },
              null,
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Showing 1 - 20 of 41 results",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 15,
                },
              ],
            },
            "ref": null,
            "rendered": "Showing 1 - 20 of 41 results",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>
              </View>,
            ],
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <NextPageIcon
                    label="Next"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./2",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Next",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Pagination Native renders with hidden results above breakpoint 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    count={21}
    generatePageLink={[Function]}
    hideResults={false}
    onNext={[Function]}
    onPrev={[Function]}
    page={1}
    pageSize={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ]
          }
        >
          <View />
          <View>
            <Link
              onPress={[Function]}
              style={
                Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                }
              }
              url="./2"
            >
              <NextPageIcon
                label="Next"
              />
            </Link>
          </View>
        </View>,
      ],
      "onLayout": [Function],
      "style": Object {
        "alignItems": "stretch",
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View />,
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#dbdbdb",
              "borderBottomWidth": 1,
              "borderStyle": "solid",
              "borderTopColor": "#dbdbdb",
              "borderTopWidth": 1,
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <NextPageIcon
                  label="Next"
                />,
                "onPress": [Function],
                "style": Object {
                  "color": "#006699",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 14,
                },
                "url": "./2",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Next",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View>
              <Link
                onPress={[Function]}
                style={
                  Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  }
                }
                url="./2"
              >
                <NextPageIcon
                  label="Next"
                />
              </Link>
            </View>
          </View>,
        ],
        "onLayout": [Function],
        "style": Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View />,
              <View>
                <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>
              </View>,
            ],
            "style": Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
                "justifyContent": "space-between",
              },
              Object {
                "borderBottomColor": "#dbdbdb",
                "borderBottomWidth": 1,
                "borderStyle": "solid",
                "borderTopColor": "#dbdbdb",
                "borderTopWidth": 1,
              },
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 14,
                    }
                  }
                  url="./2"
                >
                  <NextPageIcon
                    label="Next"
                  />
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <NextPageIcon
                    label="Next"
                  />,
                  "onPress": [Function],
                  "style": Object {
                    "color": "#006699",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 14,
                  },
                  "url": "./2",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Next",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
